refactored avaiilability router and updated api_doc
